# elevenlabs-agents-api-playground

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.cursor/commands/: case-copilot.md  development.md
.cursor/rules/: architecture-principles.mdc  elevenlabs-conventions.mdc  git-commits.mdc  python-best-practices.mdc  security-standards.mdc  testing-standards.mdc
.cursor/skills/case-copilot/: SKILL.md
.cursor/skills/elevenlabs-agents/: SKILL.md
.cursor/skills/elevenlabs-api-cookbook/: SKILL.md
.cursor/skills/elevenlabs-docs/: SKILL.md
.cursor/skills/elevenlabs-visual-system/: SKILL.md
.github/: CODEOWNERS
apps/: gradio_app.py
apps/web/: .env.example  .gitignore  README.md  package.json  pnpm-lock.yaml  tailwind.config.ts
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/components/: telecom-agent-console.tsx
apps/ws_bridge/: __init__.py  main.py
data/kb/healthcare/: 01-symptom-fever.md  02-symptom-headache.md  03-symptom-chest-pain.md  04-specialties.md  05-lgpd-policy.md  06-demo-conversation-cues.md
docs/: exploring-this-repo.md  extending-this-lab.md  walkthrough.md
docs/benchmarks/: tts-vendor-comparison.md
docs/design/: visual-system.md
docs/patterns/: post-call-webhooks.md
docs/reports/: technical-exploration-report.md
docs/scenarios/: banking.md  healthcare.md  telecom.md
engineering/architecture/: tech-stack-decisions.md
engineering/tasks/: tasks-prd-elevenlabs-vertical-exploration.md
engineering/templates/: task-template.md
product/: learning-experience.md
product/guides/: demo-agent-setup.md
product/prd/: prd-elevenlabs-vertical-exploration.md
scripts/: agent_create.py  agent_simulate.py  conversations_list.py  demo_prepare.py  demo_stack.py  generate_evidence_report.py  record_integration_cassettes.py  stt_demo.py  tts_demo.py  tts_stream_ttfb.py  tts_vendor_benchmark.py  verify_api_keys.py  voice_isolator_demo.py  voices_pt_br.py
src/eleven_demo/: client.py  config.py  paths.py
src/eleven_demo/agents/: __init__.py  conversation_sim.py  factory.py  kb.py  simulation_messages.py  tool_webhook.py  tools.py
src/eleven_demo/benchmarks/: __init__.py  openai_tts.py  tts_vendor.py
src/eleven_demo/metrics/: __init__.py  latency.py
src/eleven_demo/scenarios/: __init__.py  banking.py  base.py  demo_cli.py  healthcare.py  telecom.py
src/eleven_demo/stt/: __init__.py  batch.py  realtime.py  types.py
src/eleven_demo/tts/: __init__.py  stream.py  sync.py  ws.py
src/eleven_demo/voices/: __init__.py  catalog.py
tests/: conftest.py
tests/integration/: README.md
tests/integration/benchmarks/: test_vendor_benchmark_integration.py
tests/integration/scenarios/: _support.py  test_banking.py  test_healthcare.py  test_telecom.py
tests/unit/: test_client.py  test_config.py  test_conversations_list_cli.py  test_demo_prepare.py  test_paths.py  test_voice_isolator.py  test_voices_pt_br_cli.py
(+37 files in other folders)
