[project]
name = "eleven-demo"
version = "0.1.0"
description = "Hands-on exploration of ElevenLabs ElevenAgents and ElevenAPI through Brazilian-market scenarios"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [
    { name = "Adrianno", email = "adrianno@example.com" }
]
keywords = ["elevenlabs", "voice-ai", "agents", "tts", "stt", "demo"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]

dependencies = [
    "elevenlabs>=2.0.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "websockets>=13.0",
    "gradio>=5.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "rich>=13.9.0",
    "openai>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-xdist>=3.6.0",
    "pytest-cov>=6.0.0",
    "pytest-vcr>=1.0.2",
    "vcrpy>=6.0.2",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
]

[project.urls]
Repository = "https://github.com/adriannoes/elevenlabs-agents-api-playground"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/eleven_demo"]

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src", "tests", "scripts", "apps"]

[tool.ruff.lint]
select = [
    "E", "W",
    "F",
    "I",
    "B",
    "UP",
    "S",
    "N",
    "RUF",
    "PL",
    "SIM",
    "C4",
]
ignore = [
    "S101",
    "PLR0913",
    "PLR2004",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["S", "PLR2004"]
"scripts/**/*" = ["S603", "S607"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_ignores = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["tests.*", "scripts.*"]
disallow_untyped_defs = false
disallow_incomplete_defs = false

[[tool.mypy.overrides]]
module = ["gradio.*", "vcr.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: tests that hit the live ElevenLabs API or replay VCR cassettes (skipped without ELEVENLABS_API_KEY)",
    "slow: tests that take more than 1 second",
]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]

[tool.coverage.run]
source = ["src/eleven_demo"]
branch = true
omit = ["*/tests/*", "*/__init__.py"]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
